<resources>
    <string name="app_name">Drink Or Dare</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Main menu</string>
    <string name="second_fragment_label">Players</string>
    <string name="options_label">Options</string>
    <string name="game_setup_label">Choose the questions</string>
    <string name="custom_quest_label">Custom questions</string>
    <string name="scoreboard_label">How drunk are you?</string>
    <string name="game_screen_label">Game</string>

    <string name="play_game">Play game</string>

    <string name="dark_mode">Dark mode</string>
    <string name="notifications">Notifications</string>

    <string name="player_title">Enter player names</string>

    <string name="next">Next</string>
    <string name="end_turn">End Turn</string>
    <string name="reroll">Reroll</string>
    <string name="start_game">Start Game</string>


    <string name="physical_challenges">Enable physical challenges</string>
    <string name="trivia_questions">Enable trivia questions</string>
    <string name="truth">Enable truth questions</string>
    <string name="dare">Enable dares</string>
    <string name="spicy_questions">Enable spicy questions</string>
    <string name="custom_questions">Enable custom questions</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>