<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainMenuFragment">

    <fragment
        android:id="@+id/MainMenuFragment"
        android:name="com.example.drinkordare.MainMenuFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/main_menu_frag">

        <action
            android:id="@+id/action_MainMenuFragment_to_PlayerInputFragment"
            app:destination="@id/PlayerInputFragment" />
        <action
            android:id="@+id/action_MainMenuFragment_to_OptionsFragment"
            app:destination="@id/OptionsFragment" />
    </fragment>
    <fragment
        android:id="@+id/PlayerInputFragment"
        android:name="com.example.drinkordare.PlayerInputFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/player_input_frag">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/MainMenuFragment" />
    </fragment>
    <fragment
        android:id="@+id/OptionsFragment"
        android:name="com.example.drinkordare.OptionsFragment"
        android:label="@string/options_label"
        tools:layout="@layout/fragment_options">

        <action
            android:id="@+id/action_OptionsFragment_to_MainMenuFragment"
            app:destination="@id/MainMenuFragment" />
    </fragment>
</navigation>