<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameScreenFragment"
    style="@style/BACKGROUND">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionDisplay"
        app:layout_constraintVertical_bias="0.0">

        <Button
            style="@style/BUTTON"
            android:background="@drawable/rounded_corner"
            android:id="@+id/reroll"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:text="@string/reroll" />

        <Button
            style="@style/BUTTON"
            android:background="@drawable/rounded_corner"
            android:id="@+id/endTurn"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/end_turn" />

    </TableRow>

    <TextView
        style="@style/TEXT"
        android:id="@+id/playerDisplay"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/questionDisplay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        style="@style/TEXT"
        android:id="@+id/questionDisplay"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:background="#A19A94"
        android:gravity="center"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.607" />

    <TextView
        style="@style/TEXT"
        android:id="@+id/gameScreenTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-540dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>