<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="460dp"
        android:layout_height="972dp"
        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.502" />

    <Button
        android:id="@+id/goToMenu"
        android:layout_width="250dp"
        android:layout_height="85dp"
        android:layout_marginBottom="-350dp"
        android:backgroundTint="#A19A94"
        android:fontFamily="sans-serif-black"
        android:text="Go Back"
        android:textColor="#3C3532"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#3C3532"
        app:strokeWidth="4dp" />

    <TextView
        android:id="@+id/playersTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-540dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/options_label"
        android:textColor="#3C3532"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/darkModeSwitch"
        android:layout_width="250dp"
        android:layout_height="85dp"
        android:layout_marginTop="-300dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/dark_mode"
        android:textColor="#3C3532"
        android:textSize="24sp"
        android:thumbTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/notificationSwitch"
        android:layout_width="250dp"
        android:layout_height="85dp"
        android:layout_marginTop="-160dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/notifications"
        android:textColor="#3C3532"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>